--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/cli": "^4.10.1",
     "expo": "~38.0.1",
     "expo-splash-screen": "~0.3.1",
     "expo-status-bar": "^1.0.0",
@@ -15,16 +16,19 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "~0.62.2",
+    "react-native-elements": "2.0.4",
     "react-native-gesture-handler": "~1.6.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-screens": "~2.9.0",
     "react-native-unimodules": "~0.10.1",
+    "react-native-voice": "^0.3.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "babel-jest": "~25.2.6",
     "jest": "~25.2.6",
+    "react-native-eject": "^0.1.2",
     "react-test-renderer": "~16.11.0"
   },
   "jest": {
